test_suite/tests/errors/isolated_state_no_exit.stderr
error: Isolated state `handler` must have a return or state transition statement. Add a `return`, `=> @state` transition, or `max_iter = N => @state` redirect
  --> tests/errors/isolated_state_no_exit.rs:11:10
   |
11 |         @handler
   |          ^^^^^^^
